@@ -33,8 +33,8 @@ requires:
   namespace::clean: 0
   perl: 5.8.0
 resources:
-  bugtracker: https://github.com/tupinek/Map-Tube-Sofia/issues
-  homepage: https://github.com/tupinek/Map-Tube-Sofia
+  bugtracker: https://github.com/michal-josef-spacek/Map-Tube-Sofia/issues
+  homepage: https://github.com/michal-josef-spacek/Map-Tube-Sofia
   license: http://opensource.org/licenses/artistic-license-2.0.php
-  repository: git://github.com/tupinek/Map-Tube-Sofia
+  repository: git://github.com/michal-josef-spacek/Map-Tube-Sofia
 version: '0.10'
