@@ -24,9 +24,9 @@ requires 'Map::Tube' => '3.41';
 requires 'Moo' => 0;
 requires 'namespace::clean' => 0;
 requires 'perl' => '5.8.0';
-resources 'bugtracker' => 'https://github.com/tupinek/Map-Tube-Sofia/issues';
-resources 'homepage' => 'https://github.com/tupinek/Map-Tube-Sofia';
-resources 'repository' => 'git://github.com/tupinek/Map-Tube-Sofia';
+resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Map-Tube-Sofia/issues';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Map-Tube-Sofia';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Map-Tube-Sofia';
 test_requires 'Encode' => 0;
 test_requires 'English' => 0;
 test_requires 'Test::Map::Tube' => 0.35;
