@@ -1,6 +1,7 @@
 0.10
  - Improve SYNOPSIS section in doc.
  - Move bugtracker to github.
+ - Update author github username.
 
 0.09 2025-01-22T08:53:30+01:00
  - Rename example files to better names.
